@@ -21,6 +21,7 @@ NB: "RCS: X..Y " means that the particular release includes
   - changes to ‘gnugo-xpms’
     - now a normal var, and not a feature
     - value can be a function to compute XPMs
+  - ‘gnugo-image-display-mode’ replaces ‘gnugo-toggle-image-display-command’
   - PASS for SZ <= 19 normalized to "" on read, written as ""
   - ‘=’ also displays move number of the stone (if any) at that position
   - ‘C-u F’ adds the (abbreviated) blurb as a comment to the last node
